# pre-commit-po-hooks

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamllint  LICENSE  README.md  setup.cfg
.github/workflows/: ci.yml  update-copyright-years.yml
hooks/: check_entries.py  check_metadata.py  lreplace_extracted_comments.py  obsolete_messages.py  untranslated_messages.py
pre_commit_po_hooks/: check_entries.py  check_metadata.py  fuzzy_messages.py  obsolete_messages.py  untranslated_messages.py
tests/: test_check_entries.py  test_check_metadata.py  test_fuzzy_messages.py  test_lreplace_extracted_comments.py  test_obsolete_messages.py  test_untranslated_messages.py
