[metadata]
name = pre_commit_po_hooks
version = 1.7.0
description = pre-commit hooks for PO files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mondeja/pre-commit-po-hooks
author = Alvaro Mondejar
author_email = mondejar1994@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    obsolete-messages-hook = hooks.obsolete_messages:main
    untranslated-messages-hook = hooks.untranslated_messages:main
    fuzzy-messages-hook = hooks.fuzzy_messages:main
    lreplace-extracted-comments-hook = hooks.lreplace_extracted_comments:main
    check-metadata-hook = hooks.check_metadata:main
    check-entries-hook = hooks.check_entries:main

[options.extras_require]
dev =
    bump2version
    pytest==6.2.4
    pytest-cov==2.12.1
test =
    pytest==6.2.4
    pytest-cov==2.12.1

[bdist_wheel]
universal = True

[coverage:report]
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:
    def main()

[flake8]
max-line-length = 88
extend-ignore =
    E203,
    W503,
    D103,
    D104,
    D205,
    D400,
    D412,

[isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 88
use_parentheses = True
combine_as_imports = True
include_trailing_comma = True
py_version = 36
known_tests_third_party = pytest
sections = STDLIB,THIRDPARTY,TESTS_THIRD_PARTY,FIRSTPARTY,LOCALFOLDER
